force-app/main/default/objects/Term__c/Term__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - used to capture key terms and their details as they relate the project</description>
    <label>Term</label>
    <nameField>
        <label>Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>