force-app/main/default/objects/Term__c/fields/ADM_Stages__c.field-meta.xml
<CustomField>
    <fullName>ADM_Stages__c</fullName>
    <label>ADM Stages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analyze</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Support and Monitoring</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>