force-app/main/default/objects/Term__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>