force-app/main/default/objects/Term__c/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <description>Short Definition of term (255 limit). 

Be aware that changing this to a LONG text field negates the ability to edit in a List View. This may limit Term management.</description>
    <inlineHelpText>Short Definition of term (255 limit) 

Required for OFFICIAL Terms</inlineHelpText>
    <label>Definition</label>
    <type>TextArea</type>
</CustomField>