force-app/main/default/objects/Term__c/fields/Definition_Link__c.field-meta.xml
<CustomField>
    <fullName>Definition_Link__c</fullName>
    <description>Link to the official or a primary term definition reference. Allows a reference to an official source for greater clarity or drilling into greater details.</description>
    <inlineHelpText>Link to the official or a primary term definition reference. Allows a reference to an official source for greater clarity or drilling into greater details.</inlineHelpText>
    <label>Definition Link</label>
    <type>Url</type>
</CustomField>