force-app/main/default/objects/Term__c/fields/Effort_Savings__c.field-meta.xml
<CustomField>
    <fullName>Effort_Savings__c</fullName>
    <label>Effort Savings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>