force-app/main/default/objects/Term__c/fields/Keywords_New__c.field-meta.xml
<CustomField>
    <fullName>Keywords_New__c</fullName>
    <label>Keywords</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Hierarchy</fullName>
            </value>
            <value>
                <fullName>Account Load</fullName>
            </value>
            <value>
                <fullName>Account Planning</fullName>
            </value>
            <value>
                <fullName>Add to Group</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Agile</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Analyze</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Application Freeze</fullName>
            </value>
            <value>
                <fullName>Approval Process</fullName>
            </value>
            <value>
                <fullName>Approve All</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Atom Sphere</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>Audit Trail</fullName>
            </value>
            <value>
                <fullName>Batch Apex Class</fullName>
            </value>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Best Practices</fullName>
            </value>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Birthday Email</fullName>
            </value>
            <value>
                <fullName>Birthday Wish</fullName>
            </value>
            <value>
                <fullName>Boomi</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Call Log</fullName>
            </value>
            <value>
                <fullName>Change Management</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Chart</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>