force-app/main/default/objects/Term__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>