force-app/main/default/objects/Term__c/fields/Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Details__c</fullName>
    <description>Used for any additional details or context</description>
    <inlineHelpText>Used for any additional details or context</inlineHelpText>
    <label>Other Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>