force-app/main/default/objects/Term__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used to differentiate between different term types. Facilitates searching and cross reference.

Be aware that creating a Field Dependency on this field negates the ability to edit in a List View. This may limit Term management.</description>
    <inlineHelpText>Used to differentiate between different term types. Facilitates searching and cross reference.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Name</fullName>
            </value>
            <value>
                <fullName>Common Usage</fullName>
            </value>
            <value>
                <fullName>Technical Name</fullName>
            </value>
            <value>
                <fullName>Abbreviation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>